--- a/examples/oauth2/package.json
+++ b/examples/oauth2/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "passport-google-oauth-examples-oauth2",
+  "name": "passport-aol-oauth-examples-oauth2",
   "version": "0.0.0",
   "dependencies": {
     "express": ">= 0.0.0",
     "ejs": ">= 0.0.0",
     "passport": ">= 0.0.0",
-    "passport-google-oauth": ">= 0.0.0"
+    "passport-aol-oauth": ">= 0.0.0"
   }
 }
