--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "passport-google-oauth",
-  "version": "0.1.2",
-  "description": "Google (OAuth 1.0 and OAuth 2.0) authentication strategies for Passport.",
-  "author": { "name": "Jared Hanson", "email": "jaredhanson@gmail.com", "url": "http://www.jaredhanson.net/" },
+  "name": "passport-aol-oauth",
+  "version": "0.1.0",
+  "description": "AOL OAuth 2.0 authentication strategies for Passport.",
+  "author": { "name": "Jeff Rodenburg", "email": "jeff.rodenburg@gmail.com" },
   "repository": {
     "type": "git",
-    "url": "git://github.com/jaredhanson/passport-google-oauth.git"
+    "url": "git://github.com/jrodenburg/passport-aol-oauth.git"
   },
   "bugs": {
-    "url": "http://github.com/jaredhanson/passport-google-oauth/issues"
+    "url": "http://github.com/jaredhanson/passport-aol-oauth/issues"
   },
-  "main": "./lib/passport-google-oauth",
+  "main": "./lib/passport-aol-oauth",
   "dependencies": {
     "pkginfo": "0.2.x",
     "passport-oauth": "~0.1.3"
@@ -23,5 +23,5 @@
     "type": "MIT",
     "url": "http://www.opensource.org/licenses/MIT" 
   } ],
-  "keywords": ["passport", "google", "auth", "authn", "authentication", "identity"]
+  "keywords": ["passport", "AOL", "auth", "authn", "authentication", "identity"]
 }
